2-react-poc-cra/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: reactcra
  name: reactcra
spec:
  ports:
    - protocol: "TCP"
      port: 5100
      targetPort: 80
  selector:
    app: reactcra
