2-react-poc-cra/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-cra-service
spec:
  rules:
  - host: react-cra
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: reactcra
            port: 
              number: 5100
